[SW-97] Upgrade Sparkling Water to handle Spark 1.6
Minor fixes in test settings and build files.
 - better message for assertion in InvokeOnNodesRDD
 - remove spark.repl.class.uri configuration from Yarn integration tests.
 - add additional memory flags for executor setup for integration tests.